--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en-ca">
+<html>
 <head>
-  <meta charset="utf-8">
-  <title>Shrubs</title>
+  <title>Shrubbery, etc.</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -12,169 +11,156 @@
 </head>
 <body>
 
-  <ul class="skip-links">
-    <li><a href="#nav">Skip to navigation</a></li>
-    <li><a href="#main">Skip to the main content</a></li>
-  </ul>
-
-  <header class="masthead" role="banner" id="head" tabindex="0">
+  <div class="masthead">
     <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
       <h1 class="push-0">Shrubbery, etc.</h1>
     </div>
-    <nav role="navigation" id="nav" tabindex="0">
+    <div class="nav">
       <div class="wrapper gutter-1-2">
         <ol class="mega list-group-inline push-0">
-          <li><a href="#about" class="ib gutter-1-2 pad-t-1-2 pad-b-1-2">About</a></li>
-          <li><a href="#shrubs" class="ib gutter-1-2 pad-t-1-2 pad-b-1-2">Shrubs</a></li>
-          <li><a href="#prices" class="ib gutter-1-2 pad-t-1-2 pad-b-1-2">Prices</a></li>
-          <li><a href="#news" class="ib gutter-1-2 pad-t-1-2 pad-b-1-2">News</a></li>
-          <li><a href="#contact" class="ib gutter-1-2 pad-t-1-2 pad-b-1-2">Contact</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#">About</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#">Shrubs</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#">Prices</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#">News</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#">Contact</a></li>
         </ol>
       </div>
-    </nav>
-  </header>
+    </div>
+  </div>
 
-  <main role="main" class="about push" id="main" tabindex="0">
-    <div>
+  <div>
+    <div class="about push" id="about">
       <div class="embed embed-24by10">
-        <img class="embed-item" src="images/shrubs.jpg" alt="">
+        <img class="embed-item" src="images/shrbs.jpg" alt="">
       </div>
-      <section class="about-content pad-t-2 pad-b-2" id="about" tabindex="0">
+      <div class="about-content pad-t-2 pad-b-2">
         <div class="wrapper gutter-1-2">
-          <h2 class="push-0">About</h2>
+          <h1 class="push-0">About</h1>
           <p class="mega push-0">Is there anywhere in this town where we could buy a shrubbery!?</p>
           <p class="mega push-0 max-length not-centered">Yes, shrubberies are my trade—I am a shrubber. My name is Roger the Shrubber. I arrange, design, and sell shrubberies.</p>
         </div>
-      </section>
     </div>
 
     <div>
-      <section class="wrapper gutter-1-2" id="shrubs" tabindex="0">
-        <h2 class="push-0 color-brand-dark">Products</h2>
+      <div class="wrapper gutter-1-2">
+        <h1 class="push-0 color-brand-dark">Products</h1>
         <p class="mega max-length not-centered">If you do not tell us where we can buy a shrubbery, my friend and I will say… we will say… “nee”.</p>
         <ul class="grid list-group">
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-1.jpg" aria-details="grassy-shrubs" alt="">
-            <div class="gutter-1-4" id="grassy-shrubs" tabindex="0">
-              <h2 class="mega push-0">Grassy shrubs</h2>
+            <img class="img-flex push" alt="Grassy-shrubs" src="images/shrub-1.jpg">
+            <div class="gutter-1-4" id="grassy-shrubs"></div>
+              <h1 class="mega push-0">Grassy shrubs</h1>
               <span>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
-            </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-2.jpg" aria-details="shrubs-with-laurels" alt="">
-            <div class="gutter-1-4" id="shrubs-with-laurels" tabindex="0">
-              <h2 class="mega push-0">Shrubs with laurels</h2>
+            <img class="img-flex push" alt="Shrubs-with-laurels" src="images/shrub-2.jpg">
+            <div class="gutter-1-4" id="shrubs-with-laurels">
+              <h1 class="mega push-0">Shrubs with laurels</h1>
               <span>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</span>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-3.jpg" aria-details="two-level-shrub" alt="">
-            <div class="gutter-1-4" id="two-level-shrub" tabindex="0">
-              <h2 class="mega push-0">Two-level shrubbery</h2>
+            <img class="img-flex push" alt="Two-level shrubbery" src="images/shrub-3.jpg">
+            <div class="gutter-1-4" id="two-level-shrub">
+              <h1 class="mega push-0">Two-level shrubbery</h1>
               <span>Two level shrubbery is where I put two shrubs at different heights, usually with a little path running down the middle.</span>
             </div>
           </li>
         </ul>
-      </section>
+      </div>
     </div>
+  </div>
 
-    <section class="prices pad-t pad-b" id="prices" tabindex="0">
+    <div class="prices pad-t pad-b">
       <div class="wrapper gutter-1-2">
-        <h2 class="push-0 color-brand-dark">Prices</h2>
+        <h1 class="push-0 color-brand-dark">Prices</h1>
         <span class="mega max-length not-centered">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
 
         <table>
-          <caption>Shrubgs</caption>
-          <thead>
-            <tr>
-              <th scope="col">&nbsp;</th>
-              <th scope="col">Small</th>
-              <th scope="col">Medium</th>
-              <th scope="col">Large</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row">Grassy shrubs</th>
-              <td>$10</td>
-              <td>$20</td>
-              <td>$30</td>
-            </tr>
-            <tr>
-              <th scope="row">Shrubs with laurels</th>
-              <td>$40</td>
-              <td>$70</td>
-              <td>$100</td>
-            </tr>
-            <tr>
-              <th scope="row">Two-level shrubbery</th>
-              <td>$50</td>
-              <td>$70</td>
-              <td>$90</td>
-            </tr>
-          </tbody>
+          <tr>
+            <td>&nbsp;</td>
+            <td>Small</td>
+            <td>Medium</td>
+            <td>Large</td>
+          </tr>
+          <tr>
+            <td>Grassy shrubs</td>
+            <td>$10</td>
+            <td>$20</td>
+            <td>$30</td>
+          </tr>
+          <tr>
+            <td>Shrubs with laurels</td>
+            <td>$40</td>
+            <td>$70</td>
+            <td>$100</td>
+          </tr>
+          <tr>
+            <td>Two-level shrubbery</td>
+            <td>$50</td>
+            <td>$70</td>
+            <td>$90</td>
+          </tr>
         </table>
       </div>
-    </section>
+    </div>
 
-    <section id="news" tabindex="0" class="news pad-t pad-b">
+    <div class="news pad-t pad-b"></div>
       <div class="wrapper gutter-1-2">
-        <h2 class="push-0 color-brand-dark">News</h2>
+        <h1 class="push-0 color-brand-dark">News</h1>
         <p class="mega max-length not-centered">Then, when you have found the shrubbery, you must cut down the mightiest tree in the forest… with… a herring!</p>
 
         <ol class="list-group">
           <li class="push">
             <h3 class="push-0"><a href="#">What makes a good shrubbery?</a></h3>
-            <p class="push-0">A quick checklist for determining if a shrub is worthy of knighthood. <a href="#" aria-label="A quick checklist for determining if a shrub">Read&nbsp;more…</a></p>
+            <p class="push-0">A quick checklist for determining if a shrub is worthy of knighthood. <a href="#">Read&nbsp;more…</a></p>
           </li>
           <li class="push">
             <h3 class="push-0"><a href="#">Shrubbery recycling</a></h3>
-            <p class="push-0">I will come pick up your shrub and recycle it. Though why you’d want to get rid of a shrubbery I do not know. <a aria-label="A quick checklist for determining if a shrub" href="#">Read&nbsp;more…</a></p>
+            <p class="push-0">I will come pick up your shrub and recycle it. Though why you’d want to get rid of a shrubbery I do not know. <a href="#">Read&nbsp;more…</a></p>
           </li>
           <li class="push">
             <h3 class="push-0"><a href="#">Greens of any kind!</a></h3>
-            <p class="push-0">I now sell and plant more than just shrubs! Greens of any kind: lettuce, kale, onions, grasses, trees, etc. <a aria-label="A quick checklist for determining if a shrub" href="#">Read&nbsp;more…</a></p>
+            <p class="push-0">I now sell and plant more than just shrubs! Greens of any kind: lettuce, kale, onions, grasses, trees, etc. <a href="#">Read&nbsp;more…</a></p>
           </li>
         </ol>
       </div>
-    </section>
 
-    <div class="contact pad-t pad-b" id="contact" tabindex="0">
+    <div class="contact pad-t pad-b">
       <div class="wrapper">
-        <h2 class="push-0 color-brand-dark gutter-1-2">Contact</h2>
+        <h1 class="push-0 color-brand-dark gutter-1-2">Contact</h1>
         <p class="mega max-length not-centered gutter-1-2">We want… a shrubbery!</p>
+
         <form class="grid" method="post" action="#">
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <label for="name" class="push-1-8">Your name</label>
-            <input id="name">
+            <span class="push-1-8">Your name</span>
+            <input>
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <label for="email" class="push-1-8">E-mail address</label>
-            <input id="email" type="email">
+            <span class="push-1-8">E-mail address</span>
+            <input>
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <label for="1" class="push-1-8">Type of shrubbery</label>
-            <input aria-label="1" required>
-            <select id="1">
+            <span class="push-1-8">Type of shrubbery</span>
+            <select>
               <option>Two-level shrubbery</option>
               <option>Small shrubbery</option>
               <option>Shrubbery with laurels</option>
               <option>Knighted shrubbery</option>
             </select>
           </div>
-
           <div class="unit xs-1 text-center">
             <button class="btn mega" type="submit">Send</button>
           </div>
         </form>
       </div>
     </div>
-  </main>
 
-  <footer role="contentinfo" tabindex="0" class="footer pad-t-1-2 pad-b-1-2">
+  <div class="footer pad-t-1-2 pad-b-1-2">
     <div class="wrapper gutter-1-2">
       <small class="push-0 micro">Some quotes © <i>Monty Python and the Holy Grail</i>, 1975.</small>
     </div>
-  </footer>
+  </div>
+
 </body>
 </html>
